--- a/utiles/package.json
+++ b/utiles/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "moment": "^2.29.1",
+    "sharp": "^0.29.1"
+  }
 }
