--- a/tools/automatization/package.json
+++ b/tools/automatization/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "my-build": "gulp build"
+    "my-build": "gulp build",
+    "my-server": "gulp server"
   },
   "author": "",
   "license": "ISC",
