--- a/tools/automatization/package.json
+++ b/tools/automatization/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-cli": "^2.3.0",
     "gulp-server-livereload": "^1.9.2"
   }
 }
